# napariBaSiCPy

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/naparibasicpy/: napari.yaml
src/naparibasicpy/_tests/: test_sample_data.py  test_widget.py
